k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realm-of-echoes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: realm-of-echoes
  template:
    metadata:
      labels:
        app: realm-of-echoes
    spec:
      imagePullSecrets:
        - name: gitlab-registry-auth
      containers:
        - name: realm-of-echoes
          image: registry.gitlab.internal.garflak.com/development/realm_of_echoes:5a054092
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: realm-of-echoes-svc
spec:
  selector:
    app: realm-of-echoes
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realm-of-echoes-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: "internal-acme-issuer"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - echoes.apps.internal.garflak.com
      secretName: realm-of-echoes-tls
  rules:
    - host: echoes.apps.internal.garflak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realm-of-echoes-svc
                port:
                  number: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realm-of-echoes-ingress-external
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: echoes.garflak.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: realm-of-echoes-svc
                port:
                  number: 80
